# urban-pulse

./: .codechina-ci.yml  .dockerignore  .env.example  .gitattributes  .gitignore  API.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  openapi.json  openapi.yaml  pyproject.toml  requirements.txt
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml
_site/: index.html
backend/: __init__.py  data_acquisition.py  model_versioning.py  report_generator.py  seed_data.py
backend/analysis/: __init__.py  base_analyzer.py  custom_indicators.py  dimension_analysis.py  economic_models.py  enterprise_analyzer.py  enterprise_analyzer_v2.py  enterprise_analyzer_v3.py  government_analyzer.py  housing_affordability_analyzer.py  indicator_registry.py  real_data_analysis.py  time_series_forecast.py
backend/analytics/competitiveness/: __init__.py  framework.py  normalizer.py  ranker.py  weighting.py
backend/analytics/models/: __init__.py
backend/analytics/models/forecast/: var_model.py  xgboost_model.py
backend/analytics/models/industry/: location_quotient.py
backend/analytics/models/quality/: tfp_model.py
backend/analytics/models/resilience/: dpsr_model.py
backend/api/: __init__.py  auth.py  compression.py  limiter.py  main.py  observability.py  ratelimit.py  security_headers.py
backend/api/routes/: __init__.py  analysis.py  analysis_v3.py  cities.py  cities_v2.py  data.py  datasets.py  forecast.py  forecast_archive.py  health.py  index.py  industries.py  models.py  regions.py  risk.py  static.py  validation.py  viz.py
backend/core/: __init__.py  analyzer.py  cache.py  city_aggregation.py  config.py  data_import_export.py  data_manager.py  database.py  engine_stack.py  forecast_archive.py  forecast_base.py  forecast_engine.py  forecast_validation.py  health_data_io.py  health_index.py  health_report.py  importer.py  linear_trend_forecaster.py  multi_city.py  plugin_docs.py  plugin_registry.py  province_aggregator.py  risk_engine.py  tasks.py  validation_dashboard.py  websocket_manager.py
backend/core/storage/: __init__.py  dataset_store.py  record_store.py
backend/data/: __init__.py  city_data.py  historical_extended.py  macro_data.py
backend/data_collection/: __init__.py  base_collector.py  data_source_manager.py  finance_collector.py  industry_collector.py  nbs_collector.py  survey_collector.py  web_crawler.py  world_bank_collector.py
backend/data_processing/: __init__.py  cleaner.py  transformer.py  validator.py
backend/industries/: __init__.py  forecaster.py  models.py  registry.py
backend/models/: __init__.py  city.py  schemas.py
backend/regions/: __init__.py  city_registry.py  loader.py  models.py  registry.py  survey_integration.py
backend/utils/: __init__.py  export_utils.py  file_utils.py  html_table_visualizer.py  model_security.py  path_security.py  report_generator.py  safe_model_loader.py  visualizer.py  visualizer_base.py
backend/viz/: __init__.py  profiler.py  recommender.py  renderer.py  schema.py
config/: __init__.py  analysis_config.py  cehi_indicators.yaml  loader.py  scenario_manager.py  settings.py
config/industries/: __init__.py  semiconductor.py  template.py
config/regions/: __init__.py  beijing.py  changchun.py  changsha.py  chengdu.py  chongqing.py  dalian.py  dongguan.py  foshan.py  fuzhou.py  guangzhou.py  guiyang.py  hangzhou.py  harbin.py  hefei.py  jinan.py  kunming.py  lanzhou.py  nanchang.py  nanjing.py  nanning.py  ningbo.py  qingdao.py  shanghai.py  shenyang.py  shenzhen.py  shijiazhuang.py  suzhou.py  taiyuan.py  template.py  tianjin.py  urumqi.py  wuhan.py  wuxi.py  xiamen.py  xian.py  zhengzhou.py
data/cities/: README.md  cities.yaml
docs/: DATA_PIPELINE.md  METHODOLOGY.md  PLUGIN_ARCHITECTURE.md  ROADMAP_2026_PHASE2.md  UNIVERSAL_REFACTOR_PLAN.md
frontend/: index.html  viz-demo.html
frontend/css/: main.css
frontend/js/: api-client.js  viz-engine.js
notebooks/: 01_EDA_AND_INSIGHTS.py  01_data_collection_analysis.py  02_COST_PREDICTION.py  03_CAUSAL_INFERENCE.py  README.md  eda_real_data.py
plugins/urban-pulse-demo/: pyproject.toml
plugins/urban-pulse-demo/urban_pulse_demo/: __init__.py  demo_collector.py
public/: index.html
scripts/: build_site.py  export_openapi.py  generate_regions.py  security_audit.py
site/: index.html
tests/: conftest.py
tests/backend/: conftest.py  test_analysis.py  test_analysis_extended.py  test_api.py  test_api_contracts.py  test_api_main_extended.py  test_api_routes.py  test_city_aggregation.py  test_city_data.py  test_competitiveness.py  test_compression.py  test_core_extended.py  test_data_collection.py  test_data_processing.py  test_engine_stack.py  test_forecast_engine.py  test_forecast_validation.py  test_global_city_registry.py  test_health_data_io.py  test_health_index.py  test_health_report.py  test_historical_extended.py  test_historical_extended_extra.py  test_importer.py  test_industries.py  test_macro_data.py  test_multi_city.py  test_observability.py  test_plugin_docs.py  test_plugin_registry.py  test_province_aggregator.py  test_regions.py  test_regions_extended.py  test_report_generator.py  test_report_generator_extended.py  test_risk_engine.py  test_safe_model_loader.py  test_security_headers.py  test_seed.py  test_storage.py  (+3 more)
tests/e2e/: conftest.py  test_dashboard.py
