[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "urban-pulse"
version = "1.0.0"
description = "中国城市经济智能分析平台：35 城经济数据、时序预测、产业分析、竞争力指数与开放数据接入。"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.11,<3.14"
authors = [
    {name = "badhope"}
]
keywords = [
    "urban-economy",
    "economic-analysis",
    "city-comparison",
    "time-series-forecasting",
    "data-visualization",
    "fastapi",
    "echarts",
    "data-science",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Office/Business :: Financial",
]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pandas>=2.0",
    "numpy>=1.26",
    "scipy>=1.11",
    "plotly>=5.18",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "scikit-learn>=1.3",
    "statsmodels>=0.14",
    "joblib>=1.3",
    "sqlalchemy>=2.0.30",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "openpyxl>=3.1",
    "reportlab>=4.0",
    "python-multipart>=0.0.9",
    "requests>=2.31",
    "packaging>=24.0",
]

[project.urls]
Homepage = "https://gitcode.com/badhope/urban-pulse"
Source = "https://gitcode.com/badhope/urban-pulse"
Documentation = "https://gitcode.com/badhope/urban-pulse"
Issues = "https://gitcode.com/badhope/urban-pulse/issues"

[tool.setuptools.packages.find]
include = ["backend*", "config*"]

[project.scripts]
urban-pulse = "backend.api.main:run"

[project.optional-dependencies]
data = [
    "akshare>=1.14",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
]
forecast = [
    "statsforecast>=1.7",
    "arch>=7.0",
    "pmdarima>=2.0",
]
cli = [
    "typer>=0.12",
    "rich>=13.7",
    "shellingham>=1.5",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
    "hypothesis>=6.100",
    "httpx2>=0.27",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::RuntimeWarning:statsmodels.*",
]
markers = [
    "unit: fast unit tests with no external dependencies",
    "integration: tests that exercise multiple components",
    "slow: tests that take > 1s",
]

[tool.coverage.run]
source = ["backend"]
omit = ["*/tests/*"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
# E (pycodestyle errors), F (pyflakes), I (isort), W (warnings), UP (pyupgrade), B (bugbear)
select = ["E", "F", "I", "W", "UP", "B"]
ignore = [
    "E501",   # line-too-long: 由 line-length 控制,不强制单行
    "E402",   # module-import-not-at-top: 项目有 lazy import 模式,逐个修成本高
    "B008",   # Do not perform function call in argument defaults (FastAPI Depends 用法)
    "B007",   # unused-loop-control-variable: 风格偏好,不影响正确性
    "B028",   # no-explicit-stacklevel: 风格偏好
    "B905",   # zip-without-explicit-strict: Python 3.10+ 才有 strict 参数
    "UP007",  # Optional[X] 与 X | None 都可,保持现状
    "SIM102", # collapsible-if: 可读性见仁见智
    "SIM108", # if-else-block-instead-of-if-exp: 三元表达式不总是更可读
    "SIM118", # in-dict-keys: 风格偏好
]

[tool.ruff.lint.per-file-ignores]
# 测试与 conftest 需要在 import 前操作 sys.path
"tests/**/*.py" = ["E402"]
"**/__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["backend", "config"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
no_implicit_optional = true
disallow_untyped_defs = false
exclude = ["tests/", "scripts/generate_regions.py"]
