[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "urban-pulse-demo"
version = "0.1.0"
description = "Urban Pulse 外部插件包示例"
requires-python = ">=3.11"

[project.entry-points."urban_pulse.collectors"]
demo = "urban_pulse_demo.demo_collector:DemoCollector"

[tool.setuptools.packages.find]
where = ["."]
include = ["urban_pulse_demo*"]
